--- a/Attempt17/Attempt17.csproj
+++ b/Attempt17/Attempt17.csproj
@@ -14,6 +14,6 @@
 
   <ItemGroup>
     <Folder Include="Features\Containers\" />
-    <Folder Include="Features\Containers\Structs\" />
+    <Folder Include="Features\Containers\Composites\" />
   </ItemGroup>
 </Project>
