--- a/Attempt17/Attempt17.csproj
+++ b/Attempt17/Attempt17.csproj
@@ -15,5 +15,6 @@
   <ItemGroup>
     <Folder Include="Features\Containers\" />
     <Folder Include="Features\Containers\Composites\" />
+    <Folder Include="Features\Containers\Unions\" />
   </ItemGroup>
 </Project>
