Finish basic union implementation

--- a/Attempt17/Attempt17.csproj
+++ b/Attempt17/Attempt17.csproj
@@ -22,6 +22,7 @@
     <Folder Include="Features\Containers\Arrays\" />
     <Folder Include="Features\Containers\Unions\" />
     <Folder Include="Features\Containers\Composites\" />
+    <Folder Include="TypeChecking\Unifiers\" />
   </ItemGroup>
   <ItemGroup>
     <Compile Remove="Features\Functions\FunctionsFeature.cs" />
