--- a/src/c_playground/c_playground.vcxproj.filters
+++ b/src/c_playground/c_playground.vcxproj.filters
@@ -24,10 +24,31 @@
     <ClInclude Include="include\pthread.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\testing\pthreads\_ptw32.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\testing\pthreads\sched.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\_ptw32.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
     <ClInclude Include="include\sched.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="include\semaphore.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\config.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\context.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\implement.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\need_errno.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
