--- a/trophyc-new2/trophyc-new2.csproj
+++ b/trophyc-new2/trophyc-new2.csproj
@@ -4,11 +4,14 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
     <RootNamespace>Trophy</RootNamespace>
-    <AssemblyName>trophyc</AssemblyName>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Generation\" />
+    <None Update="program.trophy">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
