Add more features

--- a/trophyc-new2/trophyc-new2.csproj
+++ b/trophyc-new2/trophyc-new2.csproj
@@ -9,7 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Update="program.trophy">
+    <None Update="Resources\Program.trophy">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
