Auto include header

--- a/trophyc-new2/trophyc-new2.csproj
+++ b/trophyc-new2/trophyc-new2.csproj
@@ -12,6 +12,9 @@
     <None Update="Resources\Program.trophy">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Resources\trophy.h">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
