Added documentation to public methods in Lexer

--- a/src/helix/helix.csproj
+++ b/src/helix/helix.csproj
@@ -6,6 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>disable</Nullable>
     <RootNamespace>Helix</RootNamespace>
+    <!-- <GenerateDocumentationFile>true</GenerateDocumentationFile>  -->
   </PropertyGroup>
 
 </Project>
