Prototype type checker without assignment

--- a/src/helix+new/helix+new.csproj
+++ b/src/helix+new/helix+new.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <ProjectReference Include="..\helix.common\helix.common.csproj" />
     <ProjectReference Include="..\helix.front\helix.front.csproj" />
+    <ProjectReference Include="..\helix.middle\helix.middle.csproj" />
   </ItemGroup>
 
 </Project>
