--- a/src/helix/helix.csproj
+++ b/src/helix/helix.csproj
@@ -4,9 +4,13 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>disable</Nullable>
+    <Nullable>enable</Nullable>
     <RootNamespace>Helix</RootNamespace>
     <!-- <GenerateDocumentationFile>true</GenerateDocumentationFile>  -->
   </PropertyGroup>
+
+  <ItemGroup>
+    <Folder Include="Features\Variables\IR\" />
+  </ItemGroup>
 
 </Project>
